# html-parser

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt
include/: htmlParser.h
include/ast/: node.h  pageElement.h  tag.h
include/constants/: tags.h
include/lexer/: token.h  tokenType.h  tokenizer.h
include/lexing/: scanner.h  token.h  tokenType.h  tokenizer.h
include/parser/: htmlParser.h  tag.h
src/ast/: pageElement.cc  tag.cc
src/lexer/: tokenizer.cc
src/parser/: htmlParser.cc  pageElement.cc  tag.cc
src/parser/lexing/: scanner.cc  token.cc  tokenizer.cc
tests/: htmlParserTest.cc
